fix issues with text overflow recipes section

--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -163,10 +163,15 @@
     color: var(--primary-text-color);
     text-decoration: none;
     font-weight: bold;
-    overflow: hidden;
+}
+
+.normal-item-text {
+    color: var(--primary-text-color);
+    text-decoration: none;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 2; 
+    -webkit-line-clamp: 1; 
+    overflow: hidden;    
     -webkit-box-orient: vertical;
     transition: color 0.5s ease-in-out;
 }
